--- a/package.json
+++ b/package.json
@@ -69,39 +69,36 @@
 	},
 	"git": {
 		"hooks": {
-			"precommit": {
-				"src": "scripts/.pre-commit",
-				"dest": ".git/hooks/pre-commit"
-			}
+			"src": "scripts/hooks/*",
+			"dest": ".git/hooks/"
 		}
 	},
 	"devDependencies": {
-		"del": "^2.2.2",
-		"eslint": "^4.18.2",
+		"del": "^4.1.1",
+		"eslint": "^5.16.0",
 		"eslint-config-persgroep": "^2.0.0",
-		"event-stream": "^3.3.4",
-		"gulp": "^3.9.1",
+		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.0",
-		"gulp-copy": "^0.0.2",
-		"gulp-eslint": "^4.0.2",
-		"gulp-header": "^1.8.8",
-		"gulp-plumber": "^1.1.0",
-		"gulp-rename": "^1.2.2",
-		"gulp-replace": "^0.5.4",
-		"gulp-shell": "^0.5.2",
-		"gulp-sourcemaps": "2.4.1",
+		"gulp-copy": "^4.0.1",
+		"gulp-eslint": "^5.0.0",
+		"gulp-header": "^2.0.7",
+		"gulp-plumber": "^1.2.1",
+		"gulp-rename": "^1.4.0",
+		"gulp-replace": "^1.0.0",
+		"gulp-sourcemaps": "^2.6.5",
 		"gulp-strip-code": "^0.1.4",
-		"gulp-uglify": "^2.0.0",
+		"gulp-uglify": "^3.0.2",
 		"gulp-util": "^3.0.7",
-		"jasmine-core": "^2.5.2",
-		"karma": "^2.0.4",
-		"karma-browserstack-launcher": "^1.3.0",
+		"jasmine-core": "^3.4.0",
+		"karma": "^4.1.0",
+		"karma-browserstack-launcher": "^1.5.1",
 		"karma-chrome-launcher": "^2.0.0",
 		"karma-coverage": "^1.1.1",
 		"karma-edge-launcher": "^0.4.2",
 		"karma-ie-launcher": "^1.0.0",
-		"karma-jasmine": "^1.0.2",
+		"karma-jasmine": "^2.0.1",
 		"karma-junit-reporter": "^1.2.0",
-		"karma-viewport": "^1.0.2"
+		"karma-viewport": "^1.0.4",
+		"merge-stream": "^2.0.0"
 	}
 }
